--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
 		<title>A Buggy Insect Game</title>
 	</head>
 	<body>
-		<h1>Project Starter</h1>
+		<div class="screen">
+			<h1>Catch The Insect</h1>
+			<button class="btn" id="start-btn">Play Game</button>
+		</div>
+
+		<div class="screen">
+			<h1>What is your "favourite" Insect?</h1>
+			<ul class="insects-list">
+				<li>
+					<button class="choose-insect-btn">
+						<p>Fly</p>
+						<img src="http://pngimg.com/uploads" alt="" />
+					</button>
+				</li>
+			</ul>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
