added three insects

--- a/index.html
+++ b/index.html
@@ -17,10 +17,34 @@
 				<li>
 					<button class="choose-insect-btn">
 						<p>Fly</p>
-						<img src="http://pngimg.com/uploads" alt="" />
+						<img src="http://pngimg.com/uploads/fly/fly_PNG3946.png" alt="fly>
+					</button>
+				</li>
+				<li>
+					<button class="choose-insect-btn">
+						<p>Mosquito</p>
+						<img
+							src="http://pngimg.com/uploads/mosquito/mosquito_PNG18175.png"
+							alt="mosquito"
+						/>
+					</button>
+				</li>
+				<li>
+					<button class="choose-insect-btn">
+						<p>Spider</p>
+						<img
+							src="http://pngimg.com/uploads/spider/spider_PNG12.png"
+							alt="spider"
+						/>
 					</button>
 				</li>
 			</ul>
+		</div>
+
+		<div class="screen game-container" id="game-container">
+			<h3></h3>
+			<h3></h3>
+			<h3></h3>
 		</div>
 		<script src="script.js"></script>
 	</body>
