time, score and final message

--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 		</div>
 
 		<div class="screen game-container" id="game-container">
-			<h3></h3>
-			<h3></h3>
-			<h3></h3>
+			<h3 id="time">Time: 00:00</h3>
+			<h3 id="score">Score: 0</h3>
+			<h5 id="message">
+				Are you annoyed yet? <br />
+				You are playing an impossible game!
+			</h5>
 		</div>
 		<script src="script.js"></script>
 	</body>
