--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 				<li>
 					<button class="choose-insect-btn">
 						<p>Fly</p>
-						<img src="http://pngimg.com/uploads/fly/fly_PNG3946.png" alt="fly>
+						<img
+							src="http://pngimg.com/uploads/fly/fly_PNG3946.png"
+							alt="fly"
+						/>
 					</button>
 				</li>
+
 				<li>
 					<button class="choose-insect-btn">
 						<p>Mosquito</p>
@@ -30,6 +34,7 @@
 						/>
 					</button>
 				</li>
+
 				<li>
 					<button class="choose-insect-btn">
 						<p>Spider</p>
