--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 		<div class="screen game-container" id="game-container">
 			<h3 id="time" class="time">Time: 00:00</h3>
-			<h3 id="score">Score: 0</h3>
-			<h5 id="message">
+			<h3 id="score" class="score">Score: 0</h3>
+			<h5 id="message" class="message visible">
 				Are you annoyed yet? <br />
 				You are playing an impossible game!
 			</h5>
