--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 				Are you annoyed yet? <br />
 				You are playing an impossible game!
 			</h5>
+			<div class="insect">
+				<img
+					src="http://pngimg.com/uploads/mosquito/mosquito_PNG18175.png"
+					alt="mosquito"
+				/>
+			</div>
 		</div>
 		<script src="script.js"></script>
 	</body>
